samples/_failures_safe/1761098395_b07ca7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b27f7c2a.c: In function ‘main’:
./samples/SAFE/__tmp_b27f7c2a.c:185:9: error: expected declaration or statement at end of input
  185 |         }
      |         ^
./samples/SAFE/__tmp_b27f7c2a.c:185:9: error: expected declaration or statement at end of input
